# moomoo-alpha-console

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  check_spy.py  diagnose.py  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  dependencies.py  helpers.py  websocket.py
backend/app/api/routes/: config.py  diagnostics.py  health.py  market_data.py  risk.py  (+9 more)
backend/app/core/: config.py  logging.py  time.py
backend/app/db/: base.py  seed.py  session.py
backend/app/models/: __init__.py  app_setting.py  audit_log.py  bar_1d.py  entry_signal_run.py  fill.py  order.py  portfolio_snapshot.py  position.py  position_guidance_run.py  position_lifecycle_state.py  position_management_signal.py  risk_event.py  signal.py  signal_score.py  strategy_profile.py  strategy_run.py  symbol.py  trade_journal.py  watchlist_item.py
backend/app/schemas/: broker_health.py  config.py  health.py  order.py  portfolio.py  position.py  position_management.py  risk.py  settings.py  signal.py  strategy_profile.py  watchlist.py
backend/app/services/: strategy_registry.py
backend/app/strategies/: momentum_relative_strength.py
backend/app/workers/: scheduler.py
backend/tests/: conftest.py  test_api.py  test_entry_signal_prices.py  test_kline_service.py  test_mock_broker.py  test_moomoo_adapter.py  test_moomoo_market_data.py  test_paper_order.py  test_position_management.py  test_risk_engine.py  test_runtime_services.py  test_settings.py  test_signal_scoring.py  test_strategy_profiles.py  test_yfinance_provider.py
(+67 files in other folders)
